--- a/index.html
+++ b/index.html
@@ -1,77 +1,61 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" data-theme="auto">
+<html lang="en" dir="ltr" class="bg2 fg1 sans-serif" data-theme="auto">
   <head>
     <meta charset="UTF-8" />
     <meta
       http-equiv="content-security-policy"
-      content="default-src 'self'; script-src 'self'; img-src 'self'; style-src 'self' 'unsafe-inline';"
+      content="
+        default-src 'self' https://plausible.io;
+        script-src 'self' https://plausible.io;
+        img-src 'self' https://plausible.io;
+        style-src 'self' 'unsafe-inline';
+      "
     />
-    <title>%VITE_HTML_TITLE%</title>
-    <meta name="og:title" content="%VITE_HTML_TITLE%" />
-    <meta name="theme-color" content="" />
+    <title>Pokémon Type Calculator</title>
+    <meta name="og:title" content="Pokémon Type Calculator" />
     <link
       rel="prefetch"
-      href="/locales/en.json"
+      href="/data-pkmn.json"
       as="fetch"
       type="application/json"
-      crossorigin="anonymous"
     />
-    <link
-      rel="icon"
-      sizes="16x16"
-      href="/favicon-16.png?v=%VITE_ICON_VERSION%"
-    />
-    <link
-      rel="icon"
-      sizes="32x32"
-      href="/favicon-32.png?v=%VITE_ICON_VERSION%"
-    />
-    <link
-      rel="icon"
-      sizes="180x180"
-      href="/app-icon-regular-180.png?v=%VITE_ICON_VERSION%"
-    />
-    <link
-      rel="icon"
-      sizes="192x192"
-      href="/app-icon-regular-192.png?v=%VITE_ICON_VERSION%"
-    />
-    <link
-      rel="icon"
-      sizes="512x512"
-      href="/app-icon-regular-512.png?v=%VITE_ICON_VERSION%"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/app-icon-maskable-180.png?v=%VITE_ICON_VERSION%"
+    <link rel="icon" sizes="16x16" href="/favicon-16.png" />
+    <link rel="icon" sizes="32x32" href="/favicon-32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon-180.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="og:image" content="https://www.pkmn.help/favicon-192.png" />
+    <meta
+      name="twitter:image"
+      content="https://www.pkmn.help/favicon-192.png"
     />
     <meta
-      name="og:image"
-      content="https://www.pkmn.help/app-icon-regular-512.png?v=%VITE_ICON_VERSION%"
+      name="twitter:image:src"
+      content="https://www.pkmn.help/favicon-192.png"
     />
-    <meta name="og:image:width" content="512" />
-    <meta name="og:image:height" content="512" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
+      name="description"
+      content="A Pokémon type calculator to show strengths/weaknesses of different type combinations"
     />
-    <meta name="description" content="%VITE_HTML_DESCRIPTION%" />
-    <meta name="og:description" content="%VITE_HTML_DESCRIPTION%" />
-    <link rel="stylesheet" href="/src/style/index.css" />
+    <meta
+      name="og:description"
+      content="A Pokémon type calculator to show strengths/weaknesses of different type combinations"
+    />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@wavebeem" />
+    <meta name="twitter:creator" content="@wavebeem" />
     <script type="module" src="/src/main.tsx"></script>
     <script
       async
       defer
       data-domain="pkmn.help"
-      data-api="/p/api/event"
-      src="/p/js/script.js"
+      src="https://plausible.io/js/plausible.js"
     ></script>
   </head>
   <body>
-    <div id="app">
-      <div class="fallback-content">
-        <h1>%VITE_HTML_TITLE%</h1>
+    <div id="app" class="min-vh-100 flex flex-column">
+      <div class="center fallback-content">
+        <h1>Pokémon Type Calculator</h1>
         <p>
           A Pokémon type calculator to show strengths/weaknesses of different
           type combinations.
@@ -79,12 +63,20 @@
         <p>This app requires JavaScript. Make sure you have it enabled.</p>
         <p>
           Email
-          <a href="mailto:pkmn@wavebeem.com">pkmn@wavebeem.com</a>
+          <a
+            class="underline fg-link OutlineFocus"
+            href="mailto:pkmn@wavebeem.com"
+            >pkmn@wavebeem.com</a
+          >
           if you have difficulty loading the site.
         </p>
         <footer>
           &copy;
-          <a href="https://www.wavebeem.com/">Sage Fennel</a>
+          <a
+            class="underline fg-link OutlineFocus"
+            href="https://www.wavebeem.com/"
+            >Sage Fennel</a
+          >
         </footer>
       </div>
     </div>
